--- a/style.css
+++ b/style.css
@@ -3,9 +3,8 @@
 }
 h1{
     font-size: 50px;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'Times New Roman', Times, serif;
     text-align: center;
-    background-color: aqua;
 }
 h2{
     font-size: 30px;
@@ -33,8 +32,8 @@ body {
   overflow: hidden;
   position: relative;
   display: inline-block;
-  width: 200px;
-  height: 250px;
+  width: 300px;
+  height: 300px;
   margin-right: 10px;
   font-size: 20px;
   cursor: pointer;
@@ -74,4 +73,8 @@ nav a.active {
   background-color: #eee;
   color: #444;
   cursor: default;
+}
+
+footer {
+  text-align: center;
 }
